# building_blocks

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json
.github/actions/setup-poetry/: action.yml
.github/workflows/: ci.yml
docs/: QUICK_REFERENCE.md  architecture.md  database-migration.md  examples-overview.md  getting-started.md
docs/tooling/: README.md  project-creator.md
examples/: pyrightconfig.json
examples/tasker_primitive_obsession/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh
examples/tasker_primitive_obsession/src/application/ports/: __init__.py
examples/tasker_primitive_obsession/src/application/ports/common/: token_claims.py
examples/tasker_primitive_obsession/src/application/ports/inbound/: authenticate_user_use_case.py  change_user_role_use_case.py  create_task_use_case.py
examples/tasker_primitive_obsession/src/application/services/: __init__.py  authenticate_user_service.py  change_user_role_service.py  create_task_service.py  register_user_service.py  validate_token_service.py
examples/tasker_primitive_obsession/src/domain/entities/: task.py  user.py
examples/tasker_primitive_obsession/src/domain/errors/: __init__.py  change_user_role_error.py  invalid_email_format_error.py  invalid_progress_error.py  invalid_tag_error.py  invalid_user_role_error.py  task_status_transition_error.py  user_email_already_exists_error.py
examples/tasker_primitive_obsession/src/infrastructure/: config.py
examples/tasker_primitive_obsession/src/infrastructure/hashing/: bcrypt.py
examples/tasker_primitive_obsession/src/infrastructure/persistence/: __init__.py  database.py  helpers.py
examples/tasker_primitive_obsession/src/infrastructure/token/: __init__.py  jwt_token_authorizers.py  jwt_token_claims_extractor.py  jwt_token_generators.py  jwt_token_validator.py
examples/tasker_primitive_obsession/src/presentation/: wiring.py
examples/tasker_primitive_obsession/src/presentation/http/: exception_handlers.py  main.py
examples/tasker_primitives/: Dockerfile  docker-entrypoint.sh
examples/tasker_primitives/src/application/ports/: __init__.py
examples/tasker_primitives/src/application/services/: __init__.py  authenticate_user_service.py  create_task_service.py  register_user_service.py  validate_token_service.py
examples/tasker_primitives/src/domain/entities/: task.py  user.py
examples/tasker_primitives/src/domain/ports/: __init__.py
examples/tasker_primitives/src/infrastructure/: config.py
examples/tasker_primitives/src/infrastructure/hashing/: bcrypt.py
examples/tasker_primitives/src/infrastructure/persistence/: database.py
examples/tasker_primitives/src/infrastructure/token/: jwt_token_authorizers.py  jwt_token_claims_extractor.py  jwt_token_generators.py  jwt_token_validator.py
examples/tasker_primitives/src/presentation/: wiring.py
examples/tasker_primitives/src/presentation/http/: main.py
examples/tasker_strongly_typed/: README.md
examples/taskflow/: README.md  pyproject.toml
examples/taskflow/src/taskflow/: __init__.py
examples/taskflow/tests/: test_setup.py
examples/taskflow_primitive_obsession/: README.md  pyproject.toml
examples/taskflow_primitive_obsession/scripts/: dev-setup.sh
examples/taskflow_primitive_obsession/src/taskflow_primitive_obsession/: __init__.py
examples/taskflow_primitive_obsession/src/taskflow_primitive_obsession/application/ports/inbound/: create_task_use_case.py
examples/taskflow_primitive_obsession/src/taskflow_primitive_obsession/domain/entities/: task.py
examples/taskflow_primitive_obsession/src/taskflow_primitive_obsession/domain/ports/outbound/: task_repository.py
examples/taskflow_primitive_obsession/tests/: test_setup.py
examples/taskflow_primitive_obsession/tests/unit/domain/entities/: test_task.py
examples/taskflow_primitives/: README.md  pyproject.toml
examples/taskflow_primitives/scripts/: quality-check.sh  test.sh
examples/taskflow_primitives/src/taskflow_primitives/: __init__.py
examples/taskflow_primitives/tests/: conftest.py
postgres-initdb/: init-multi-db.sh
scripts/: check_architecture.py  create-example-project.sh  create_example.py  create_example.sh  generate_migration.sh  help.sh  migrate.sh
src/building_blocks/abstractions/: mapper.py  result.py
src/building_blocks/application/: README.md  application_exception.py
src/building_blocks/application/ports/: __init__.py
src/building_blocks/application/ports/inbound/: use_case.py
src/building_blocks/application/ports/outbound/: event_publisher.py  notifier.py  unit_of_work.py
src/building_blocks/domain/: README.md  __init__.py  aggregate_root.py  domain_error.py  domain_exception.py  entity.py  value_object.py
src/building_blocks/domain/entities/: __init__.py
src/building_blocks/domain/errors/: __init__.py  domain_error.py  domain_rule_violation_error.py  domain_validation_error.py
src/building_blocks/domain/events/: __init__.py
src/building_blocks/domain/messages/: __init__.py  command.py  event.py  message.py
src/building_blocks/domain/ports/: __init__.py
src/building_blocks/domain/ports/inbound/: __init__.py  domain_use_case.py
src/building_blocks/domain/ports/outbound/: __init__.py  convenience_repository.py  read_only_repository.py  repository.py  unit_of_work.py  write_only_repository.py
src/building_blocks/domain/services/: __init__.py
src/building_blocks/examples/fastapi/: README.md
src/building_blocks/infrastructure/: README.md
tests/building_blocks/abstractions/: test_result.py
tests/building_blocks/application/: test_application_exception.py
tests/building_blocks/domain/: test_aggregate_root.py  test_domain_error.py  test_domain_exception.py  test_entity.py  test_value_object.py  test_value_objects.py
tests/building_blocks/domain/errors/: test_domain_rule_violation_error.py  test_domain_validation_error.py
tests/building_blocks/domain/messages/: test_command.py  test_event.py  test_message.py
(+91 files in other folders)
