[tool.poetry]
name = "building-blocks"
version = "0.1.0"
description = "A clean architecture Python library following hexagonal principles"
authors = ["Glauber Brennon <glauberbrennon@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "building_blocks", from = "src"}]
keywords = [
    "clean architecture",
    "hexagonal architecture",
    "python library",
    "framework agnostic",
    "domain-driven design",
    "ddd",
    "software architecture",
    "software design",
    "software engineering",
    "framework-agnostic",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "*"
bandit = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
fastapi = {extras = ["standard"], version = "^0.115.13"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Unified Code Style Configuration using Ruff

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests", "examples"]
fix = true  # Enable auto-fixing

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = ["D203", "D213"]  # Optional: ignore conflicting docstring rules

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "src/building_blocks/application/ports/**/*.py",
    "src/building_blocks/domain/ports/**/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError"
]
