[tool.poetry]
name = "taskflow"
version = "0.1.0"
description = "Clean Architecture with DDD Example showcasing building-blocks library"
authors = ["Glauber Brennon <glauberbrennon@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "taskflow", from = "src"}]
keywords = [
    "clean architecture example",
    "hexagonal architecture example",
    "domain-driven design example",
    "ddd example",
    "building-blocks showcase",
    "software architecture",
    "clean code example"
]

[tool.poetry.dependencies]
python = "^3.9"
building-blocks = {path = "../../", develop = true}
typer = "^0.9.0"
rich = "^13.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"

[tool.poetry.scripts]
taskflow = "taskflow.presentation.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool configurations inherited from root pyproject.toml
# Run quality checks from repository root to use shared configuration
