[tool.poetry]
name = "taskflow_primitive_obsession"
version = "0.1.0"
description = "Anti-pattern example demonstrating primitive obsession and anemic domain model"
authors = ["Glauber Brennon <glauberbrennon@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "taskflow_primitive_obsession", from = "src"}]
keywords = [
    "anti-pattern example",
    "primitive obsession",
    "anemic domain model",
    "code smell example",
    "what not to do",
    "refactoring example"
]

[tool.poetry.dependencies]
python = "^3.9"
building-blocks = {path = "../../", develop = true}
typer = "^0.9.0"
rich = "^13.0.0"

[tool.poetry.scripts]
taskflow_primitive_obsession = "taskflow_primitive_obsession.presentation.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool configurations inherited from root pyproject.toml
# Run quality checks from repository root to use shared configuration
